--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Shared/_Header.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Shared/_Header.cshtml
@@ -69,6 +69,9 @@
                 else if (userRole == "Seller")
                 {
                     <li class="rounded-sm px-3 py-1 hover:bg-gray-100">
+                        <a href="/Company/Detail/User/@userIdString" class="block w-full">Company Profile</a>
+                    </li>
+                    <li class="rounded-sm px-3 py-1 hover:bg-gray-100">
                         <a href="/BatchIndex" class="block w-full">Batch Management</a>
                     </li>
                 }
@@ -78,7 +81,6 @@
                         <a href="" class="block w-full">Delivery Dashboard</a>
                     </li>
                 }
-                
                 <li class="rounded-sm px-3 py-1 hover:bg-gray-100">
                     <form method="post" asp-page="/Login/Logout">
                         <button type="submit" class="w-full text-left">Logout</button>
