--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/FlowerPages/BuyFlowerDetail.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/FlowerPages/BuyFlowerDetail.cshtml
@@ -80,9 +80,13 @@
                         <h3 class="text-2xl font-bold text-black mb-4">@(Model.Flower.Name ?? "Flower Name Not Available")</h3>
                         <p class="text-gray-700 mb-4">@(Model.Flower.Description ?? "No description available.")</p>
 
-                        <p><strong>Price per unit:</strong> $@(Model.Flower.PricePerUnit)</p>
+                        @{
+                            var cultureInfo = new System.Globalization.CultureInfo("vi-VN");
+                        }
+                        <p><strong>Price per unit:</strong> @Model.Flower.PricePerUnit.ToString("C", cultureInfo)</p>
                         <p><strong>Origin:</strong> @(Model.Flower.Origin ?? "Unknown")</p>
                         <p><strong>Color:</strong> @(Model.Flower.Color ?? "Not specified")</p>
+                        <p><strong>Quantity:</strong> @(Model.Flower.RemainingQuantity)</p>
 
                         <!-- Batch Information -->
                         @if (Model.Flower.Batch != null)
