--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/BatchPages/BatchIndex.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/BatchPages/BatchIndex.cshtml
@@ -38,7 +38,6 @@
                                                         <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Batch Name</th>
                                                         <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Event Name</th>
                                                         <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Event Date</th>
-                                                        <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Quantity</th>
                                                         <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Status</th>
                                                         <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Company</th>
                                                         <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Actions</th>
@@ -51,7 +50,6 @@
                                                             <td class="px-3 py-4 whitespace-nowrap text-sm font-medium text-gray-900">@batch.BatchName</td>
                                                             <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">@batch.EventName</td>
                                                             <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">@batch.EventDate.ToShortDateString()</td>
-                                                            <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">@batch.BatchQuantity</td>
                                                             <td class="p-4 whitespace-nowrap">
                                                                 <span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full
         @(batch.Status.ToLower() == "active" ? "bg-green-100 text-green-800"
@@ -69,13 +67,34 @@
                                                                 }
                                                             </td>
                                                             <td class="px-3 py-4 whitespace-nowrap text-sm font-medium">
-                                                                <a asp-page="/BatchPages/BatchDetails" asp-route-id="@batch.BatchId" class="cursor-pointer whitespace-nowrap rounded-md bg-sky-500 px-4 py-2 text-sm font-medium tracking-wide text-white transition hover:opacity-75 text-center focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-sky-500 active:opacity-100 active:outline-offset-0 disabled:opacity-75 disabled:cursor-not-allowed dark:bg-sky-500 dark:text-white dark:focus-visible:outline-sky-500 mr-2">Details</a>
-                                                                <a asp-page="/BatchPages/EditBatch" asp-route-id="@batch.BatchId" class="cursor-pointer whitespace-nowrap rounded-md bg-amber-500 px-4 py-2 text-sm font-medium tracking-wide text-white transition hover:opacity-75 text-center focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-amber-500 active:opacity-100 active:outline-offset-0 disabled:opacity-75 disabled:cursor-not-allowed bg-yellow-500 mr-2">Edit</a>
-                                                                <a asp-page="/BatchPages/DeleteBatch" asp-route-id="@batch.BatchId" class="cursor-pointer whitespace-nowrap rounded-md bg-red-500 px-4 py-2 text-sm font-medium tracking-wide text-white transition hover:opacity-75 text-center focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-500 active:opacity-100 active:outline-offset-0 disabled:opacity-75 disabled:cursor-not-allowed dark:bg-red-500 dark:text-white dark:focus-visible:outline-red-500">Delete</a>
+                                                                <a asp-page="/BatchPages/BatchDetails" asp-route-id="@batch.BatchId" class="cursor-pointer whitespace-nowrap rounded-md bg-sky-500 px-4 py-2 text-sm font-medium tracking-wide text-white transition hover:opacity-75 text-center focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-sky-500 active:opacity-100 active:outline-offset-0 disabled:opacity-75 disabled:cursor-not-allowed dark:bg-sky-500 dark:text-white dark:focus-visible:outline-sky-500 mr-2">
+                                                                    Details
+                                                                </a>
+
+                                                                @if (batch.Status.ToLower() != "overdue")
+                                                                {
+                                                                    <a asp-page="/BatchPages/EditBatch" asp-route-id="@batch.BatchId" class="cursor-pointer whitespace-nowrap rounded-md bg-amber-500 px-4 py-2 text-sm font-medium tracking-wide text-white transition hover:opacity-75 text-center focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-amber-500 active:opacity-100 active:outline-offset-0 disabled:opacity-75 disabled:cursor-not-allowed bg-yellow-500 mr-2">
+                                                                        Edit
+                                                                    </a>
+                                                                    <a asp-page="/BatchPages/DeleteBatch" asp-route-id="@batch.BatchId" class="cursor-pointer whitespace-nowrap rounded-md bg-red-500 px-4 py-2 text-sm font-medium tracking-wide text-white transition hover:opacity-75 text-center focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-500 active:opacity-100 active:outline-offset-0 disabled:opacity-75 disabled:cursor-not-allowed dark:bg-red-500 dark:text-white dark:focus-visible:outline-red-500">
+                                                                        Delete
+                                                                    </a>
+                                                                }
+                                                                else
+                                                                {
+                                                                    <a class="cursor-not-allowed whitespace-nowrap rounded-md bg-gray-300 px-4 py-2 text-sm font-medium tracking-wide text-gray-500 opacity-50 mr-2">
+                                                                        Edit
+                                                                    </a>
+                                                                    <a class="cursor-not-allowed whitespace-nowrap rounded-md bg-gray-300 px-4 py-2 text-sm font-medium tracking-wide text-gray-500 opacity-50">
+                                                                        Delete
+                                                                    </a>
+                                                                }
+
                                                                 <a asp-page="/FlowerPages/FlowerDetailInBatch" asp-route-batchId="@batch.BatchId" class="cursor-pointer whitespace-nowrap rounded-md bg-red-500 px-4 py-2 text-sm font-medium tracking-wide text-white transition hover:opacity-75 text-center focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-500 active:opacity-100 active:outline-offset-0 disabled:opacity-75 disabled:cursor-not-allowed dark:bg-red-500 dark:text-white dark:focus-visible:outline-red-500">
                                                                     View Flower
                                                                 </a>
                                                             </td>
+
                                                         </tr>
                                                     }
                                                 </tbody>
