--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/FlowerPages/CreateFlower.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/FlowerPages/CreateFlower.cshtml
@@ -56,8 +56,17 @@
 
                         <div>
                             <label for="origin" class="block text-sm font-medium text-gray-700">Origin</label>
-                            <input type="text" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50" id="origin" asp-for="FlowerInput.Origin" required />
+                            <select id="origin" asp-for="FlowerInput.Origin" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50" required>
+                                <option value="">-- Select Province --</option>
+                                <option value="Đà Lạt">Đà Lạt</option>
+                                <option value="Hà Nội">Hà Nội</option>
+                                <option value="Lào Cai">Lào Cai</option>
+                                <option value="Hải Phòng">Hải Phòng</option>
+                                <option value="Đà Nẵng">Đà Nẵng</option>
+                                <option value="Hồ Chí Minh">Hồ Chí Minh</option>
+                            </select>
                         </div>
+
                     </div>
 
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
