Update_Batch_CheckStatus_OrderMessage

--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/OrderPages/OrderFailure.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/OrderPages/OrderFailure.cshtml
@@ -1,4 +1,8 @@
 ﻿@page
 @model PRN231_2_EventFlowerExchange_FE.Pages.OrderPages.OrderFailureModel
 @{
+    Layout = null; // Nếu không sử dụng layout chung, bạn có thể điều chỉnh cái này
 }
+
+<h2>Order Failure</h2>
+<p>@Model.ErrorMessage</p>
