BE: Add validates for userSerice

--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/UserPages/UserIndex.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/UserPages/UserIndex.cshtml
@@ -29,9 +29,9 @@
                         <form method="get" class="mb-4 flex space-x-2">
                             <select name="searchColumn"
                                     class="px-3 py-2 bg-white border border-gray-300 rounded-md focus:outline-none focus:ring focus:ring-indigo-100 focus:border-indigo-300">
-                                <option value="all" selected="@(string.IsNullOrEmpty(Model.SearchColumn) || Model.SearchColumn.ToLower() == "all")">
+                         @*        <option value="all" selected="@(string.IsNullOrEmpty(Model.SearchColumn) || Model.SearchColumn.ToLower() == "all")">
                                     All Columns
-                                </option>
+                                </option> *@
                                 <option value="FullName" selected="@(Model.SearchColumn?.ToLower() == "fullname")">
                                     Full Name
                                 </option>
