--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Shared/_Header.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Shared/_Header.cshtml
@@ -69,7 +69,7 @@
                 else if (userRole == "Seller")
                 {
                     <li class="rounded-sm px-3 py-1 hover:bg-gray-100">
-                        <a href="/Company/Detail/User/@userIdString" class="block w-full">Company Profile</a>
+                        <a href="/CompanyEdit/@userIdString" class="block w-full">Company Profile</a>
                     </li>
                     <li class="rounded-sm px-3 py-1 hover:bg-gray-100">
                         <a href="/BatchIndex" class="block w-full">Batch Management</a>
